# Adrablox

./: .dist_list.json  .gitattributes  .gitignore  .plugin_list_appdata.json  .plugin_list_documents.json  .plugin_list_local_after.json  .plugin_list_local_final.json  .plugin_list_local_root.json  AdrabloxMCP.rbxm  Cargo.toml  README.md  adrablox.project.json  analysis_pssa.json  analysis_pssa_assignment_files.json  analysis_pssa_emptycatch_files.json  analysis_pssa_rule_summary.json  analysis_pssa_sample.json  analysis_pssa_summary.json  analysis_pssa_writehost_files.json  analysis_raw.txt  default.project.json  mcp_transport_plan.md  studio_snapshot.json
cmd/mcp-server/: Cargo.toml
cmd/mcp-server/src/: adapters.rs  compat_rojo.rs  config.rs  main.rs  project_snapshot.rs  ws.rs
docs/: day0_onboarding.md  implementation_status.md  mcp_contract_v1.md  mcp_studio_unified_project_plan.md  proposed_structure.md  studio_transport_matrix.md  vscode_ux_extension_mvp.md  vscode_ux_extension_phase4_5_plan.md  ws_protocol.md  ws_transport_migration_guide.md
fixtures/: complex.project.json  lifecycle_ops.project.json  metadata_churn.project.json  mixed_services.project.json  nested_modules.project.json  presentation_services.project.json  serverstorage_flow.project.json  service_heavy.project.json  startercharacter_flow.project.json  starterpack_inventory.project.json  teams_spawns.project.json  ui_container.project.json
plugin/: mcp-studio.plugin.project.json
scripts/: apply_empty_catch_fix.ps1  apply_unused_param_fix.ps1  auto_fix_unused_params.ps1  fix_empty_catch.ps1  (+21 more)
(+166 files in other folders)
